--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     text-decoration: none;
     width: 100%;
-    background-color: #4CAF50;
+    background: #307470;
     -webkit-box-shadow: 3px 3px 10px 3px rgba(76, 176, 79, 0.27);
     -moz-box-shadow: 3px 3px 10px 3px rgba(76, 176, 79, 0.27);
     box-shadow: 3px 3px 10px 3px rgba(76, 176, 79, 0.27);
