--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
 }
 
-@keyframes slideIn {
+@keyframes fadeIn {
     from {
         opacity: 0;
         transform: translateY(-50px);
@@ -24,6 +24,7 @@ body {
     }
 }
 
+
 h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -32,69 +33,75 @@ h2 {
 }
 
 .inup {
-    width: 40%;
-    margin: 0 auto;
+    width: 400px;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 5px;
-    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
+    background: linear-gradient(to right, #11998e, #38ef7d);
+    color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    animation: fadeIn 0.5s ease forwards;
     box-shadow: rgba(76, 175, 80, 0.26) 5px 5px, rgba(76, 175, 80, 0.24) 10px 10px, rgba(76, 175, 80, 0.18) 15px 15px;
-    margin-top: 100px;
-    animation: slideIn 0.5s ease forwards;
+    margin-top: 70px;
 }
 
 h3 {
-    font-weight: 500;
-    font-style: italic;
+    margin-bottom: 20px;
+    font-size: 24px;
 }
+
 
 label {
     display: block;
+    text-align: left;
     margin-bottom: 5px;
-    font-style: italic;
+    font-weight: bold;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
-button {
-    width: 100%;
+input {
+    width: calc(100% - 12px);
     padding: 8px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
+    border: none;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
+
 button {
-    font-size: 16px;
     font-style: italic;
+    font-size: 16px;
+    width: 100%;
+    padding: 10px;
     margin-top: 25px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #307470;
+    color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.2s;
+    transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #42476d;
 }
+
 
 .loginsignup {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .loginsignup h2 {
-    padding: 10px;
+    padding: 15px;
     width: 20%;
 }
 
 .title {
-    border-bottom: solid #4CAF50;
-    background-color: rgba(76, 175, 80, 0.05);
-    padding: 10px;
+    border-bottom: solid 5px #307470;
+    background-color: rgba(3, 3, 3, 0.05);
+    padding: 15px;
     border-radius: 5px;
 }
