--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -24,7 +24,6 @@ body {
     }
 }
 
-
 h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -50,7 +49,6 @@ h3 {
     font-size: 24px;
 }
 
-
 label {
     display: block;
     text-align: left;
@@ -66,7 +64,6 @@ input {
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.9);
 }
-
 
 button {
     font-style: italic;
@@ -86,7 +83,6 @@ button:hover {
     background-color: #42476d;
 }
 
-
 .loginsignup {
     display: flex;
     flex-direction: row;
@@ -97,6 +93,10 @@ button:hover {
 .loginsignup h2 {
     padding: 15px;
     width: 20%;
+}
+
+.loginsignup h2:hover {
+    cursor: pointer;
 }
 
 .title {
